# vision-agent-scratch

./: .gitignore  pyproject.toml
notebook/: extract_code.py  vision-agent_scratch.ipynb  vision-agent_tutorial.ipynb  vision-agnet_scratch2.ipynb  visulization.py
notebook/vision-agent_output/: generated_code.py
scripts/: vision_agent.py
src/: codegen.py  config.py  display.py  executor.py  llm.py  media.py  pipeline.py  planner.py  prompt.py  types.py
