[project]
name = "agentic-visionai-qwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.1,<2.6.0",
    "torchvision>=0.19.1,<0.21.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "transformers>=4.57.3",
    "pytorch-lightning>=2.6.0",
    "torchmetrics>=1.8.2",
    "pycocotools>=2.0.10",
    "matplotlib",
    "timm>=1.0.22",
    "vision-agent>=1.0.0",
    "python-dotenv>=1.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[tool.uv]
override-dependencies = [
    "av>=13.0.0",]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
